--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -3,6 +3,7 @@ header {
     height: 12vh;
     position: fixed;
     z-index: 10;
+    top: 0;
 }
 
 #header-container {
@@ -30,10 +31,10 @@ header {
 
 main {
     width: 100%;
+    margin-top: 12vh;
 }
 
 footer {
-    position: absolute;
     width: 100%;
     height: 35vh;
     bottom: 0;
