--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -31,11 +31,13 @@ header {
 }
 
 main {
+    height: 70vh;
     width: 100%;
     margin-top: 12vh;
 }
 
 footer {
+  
     width: 100%;
     height: 15vh;
     bottom: 0;
@@ -91,6 +93,7 @@ footer {
     }
 
     footer {
+       
         padding: 25px 0 25px 0;
     }
 
