--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,6 +1,18 @@
 #home-page-container {
-    padding: 7vh 0;
-    text-align: center;
+    padding: 7vh 10vw;
+    /* text-align: center; */
     color: var(--red);
+    min-height: 40vh;
     border: 1px solid var(--red);
+}
+
+.grid {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+}
+
+.grid-item {
+    width: 100%;
+    height: 100%;
 }
