--- a/src/components/Cards/CardLink/CardLink.css
+++ b/src/components/Cards/CardLink/CardLink.css
@@ -33,9 +33,9 @@
 }
  
 
-@media only screen and (min-width: 481px) and (max-width: 768px) {
+@media only screen and (min-width: 481px) {
     .card-link {
-        line-height: 2vw;
+        line-height: 2.5vw;
         text-align: center;
         margin: 0 2vw;
         margin-top: 0;
@@ -70,31 +70,6 @@
 
     .card-link a {
         padding: 27% 10%;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px)  {
-    .card-link {
-        line-height: 2vw;
-        text-align: center;
-        margin: 0 2vw;
-        margin-top: 0;
-        margin-bottom: 3.5vw;
-        border-radius: 7px;
-    }
-
-    .card-link a {
-        box-sizing: border-box;
-        padding: 25% 10%;
-        font-size: 0.7em;
-    }
-
-    .card-link span {
-        display: block;
-    }
-
-    .card-link img {
-        width: 30%;
-        margin-bottom: 10px;
+        font-size: .9em;
     }
 }
