--- a/src/components/Cards/CardLink/CardLink.css
+++ b/src/components/Cards/CardLink/CardLink.css
@@ -73,3 +73,9 @@
         font-size: .9em;
     }
 }
+
+@media only screen and (min-width: 1400px) {
+    .card-link a {
+        font-size: 1.2vw;
+    }
+}
