Created new layout for landing page

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -5,14 +5,15 @@
 }
 
 .background-svg-1 {
-    height: 60vh;
+    height: 27vw;
     position: fixed;
-    top: 20%;
-    right: 7%;
+    top: 23%;
+    right: 9%;
+    z-index: -1;
 }
 
 .background-svg-2 {
-    height: 75vh;
+    width: 50vw;
     position: fixed;
     z-index: -1;
     bottom: 0;
@@ -22,6 +23,7 @@
 #special-container {
     margin-top: 17vh;
     margin-left: 10vw;
+    z-index: 10;
 }
 
 #special-container h1 {
@@ -55,18 +57,15 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background: -webkit-gradient(linear,left top, left bottom,from(#fca15a),to(#f587b0));
-    background: -webkit-linear-gradient(#fca15a,#f587b0);
-    background: -o-linear-gradient(#fca15a,#f587b0);
-    background: linear-gradient(#fca15a,#f587b0);
+    background: #f67676;
     height: 4vw;
-    border-radius: 10vw;
+    border-radius: 5px;
     -webkit-box-shadow: 2px 8px 22px rgba(0, 0, 0, 0.16);
             box-shadow: 2px 8px 22px rgba(0, 0, 0, 0.16);
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (orientation: portrait) and (max-width: 768px) {
     .background-svg-1{
         width: 70vw;
         height: auto;
@@ -91,6 +90,8 @@
     
     #special-container h1 {
         font-size: 3.5vh;
+        max-width: 80%;
+        margin: 0 auto;
     }
 
     #special-container p {
@@ -105,35 +106,5 @@
 
     #special-container div a {
         height: 5vh;
-    }
-}
-
-@media screen and (orientation: landscape) and (max-width: 768px) {
-    .background-svg-1 {
-        display: none;
-    }
-
-    .background-svg-2 {
-        width: 100vw;
-        height: auto;
-    }
-
-    #special-container h1 {
-        font-size: 2.5vw;
-    }
-
-    #special-container p {
-        font-size: 1.5vw;
-        color: black;
-    }
-
-    #special-container div {
-        font-size: 1.4vw;
-        margin: 4vh auto;
-        max-width: 12vw;
-    }
-
-    #special-container div a {
-        height: 4vw;
     }
 }
