--- a/src/components/ResourceCard/ResourceCard.css
+++ b/src/components/ResourceCard/ResourceCard.css
@@ -8,6 +8,8 @@
     margin-top: 4vh;
     display: block;
     border-radius: 3px;
+    transition: all 0.2s;
+    background: #fff;
 }
 
 .resource-card h2 {
@@ -18,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 3px;
 }
 
 .resource-card img {
@@ -34,19 +37,40 @@
 
 .resource-card button {
     margin-left: 15px;
-    padding: 7px 15px;
+    padding: 0;
     font-size: 0.76em;
     border-style: solid;
-    border-color: #99cffe;
-    background-color: #99cffe;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.16);
     cursor: pointer;
     color: white;
     font-weight: 600;
+    outline: none;
 }
 
-.bookmarked {
-    color: #99cffe;
+.resource-card button a {
+    display: inline-block;
+    padding: 7px 15px;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: #fff;
+}
+
+.expanded {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin: 0;
+    padding: 0;
+    width: 0;
+    min-width: 90vw;
+    height: 50vh; 
+    margin-left: -45vw;
+    margin-top: -25vh;
+    z-index: 16;
+}
+
+.expanded p, .expanded button {
+    display: none;
 }
 
 .resource-card button:hover {
@@ -73,8 +97,12 @@
 
     .resource-card button {
         margin-left: 2vh;
-        padding: 1vh 2vh;
+        padding: 0;
         font-size: 0.9vw;
+    }
+
+    .resource-card button a {
+        padding: 1vh 2vh;
     }
 }
 
@@ -98,8 +126,19 @@
 
     .resource-card button {
         margin-left: 2.5vh;
-        padding: 1vh 2.5vh;
+        padding: 0;
         font-size: 1.1vw;
+    }
+
+    .resource-card button a {
+        padding: 1vh 2.5vh;
+    }
+
+    .expanded {
+        min-width: 80vw;
+        height: 80vh; 
+        margin-left: -40vw;
+        margin-top: -40vh;
     }
 }
 
