Button Color changed

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -65,7 +65,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background: #f67676;
+    background: #8465ac;
     height: 4vw;
     border-radius: 5px;
     -webkit-box-shadow: 2px 8px 22px rgba(0, 0, 0, 0.16);
