Desing for links

--- a/src/components/ResourceCardExpanded/ResourceCardExpanded.css
+++ b/src/components/ResourceCardExpanded/ResourceCardExpanded.css
@@ -28,8 +28,8 @@
 .close {
     margin-right: 10px;
     border-style: solid;
-    background-color: #8465ac;
-    border-color: #8465ac;
+    background-color: #262626;
+    border-color: #262626;
     border-radius: 50%;
     color: white;
     padding: 0 3px;
