--- a/src/containers/ResourcesPage/ResourcesPage.css
+++ b/src/containers/ResourcesPage/ResourcesPage.css
@@ -34,6 +34,10 @@
     cursor: pointer;
 }
 
+.resource-page-tags {
+    margin-top: 1vh;
+}
+
 @media only screen and (min-width: 1024px) {
     .resources-page-container {
         margin: 2% auto;
