--- a/src/components/LinkButton/LinkButton.css
+++ b/src/components/LinkButton/LinkButton.css
@@ -5,13 +5,28 @@
     text-align: left;
     box-sizing: border-box;
     padding: 10px 15px;
-    background: white;
-    box-shadow: 2px 8px 20px rgba(0, 0, 0, 0.16);
-    border-radius: 3px;
+    background: #fff;
+    border-radius: 1px;
     font-size: 0.7em;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 1), 2px 8px 20px rgba(0, 0, 0, 0.16);
+}
+
+.link-button > *:first-child {
+    color: #06addb;
+    font-weight: 600;
 }
 
 .link-tags {
     font-size: 0.8em;
     margin-top: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+    .link-button {
+        max-width: 350px;
+        margin-right: 5%;
+        margin-bottom: 1.5%;
+        padding: 1vw 1.5vw;
+        font-size: 0.9em;
+    }
 }
