--- a/src/components/ResourceCard/ResourceCard.css
+++ b/src/components/ResourceCard/ResourceCard.css
@@ -90,7 +90,11 @@
 
     .resource-card p {
         font-size: 0.8vw;
-        padding: 2vh;
+        padding: 2vh 0 0 2vh;
+    }
+
+    .resource-card-tags {
+        padding: 0.2vh 0 1.5vh 1.5vh;
     }
 
     .resource-card button {
@@ -116,7 +120,11 @@
 
     .resource-card p {
         font-size: 1vw;
-        padding: 2.5vh;
+        padding: 2.5vh 0 0 2.5vh;
+    }
+
+    .resource-card-tags {
+        padding: .3vh 0 1.7vh 1.7vh;
     }
 
     .resource-card button {
