--- a/src/components/ResourceCardExpanded/ResourceCardExpanded.css
+++ b/src/components/ResourceCardExpanded/ResourceCardExpanded.css
@@ -5,6 +5,7 @@
     background: #fff;
     width: 90%;
     margin: 4vh auto;
+    margin-bottom: 10vh;
     min-height: 70vh;
 }
 
@@ -28,20 +29,24 @@
 .close {
     margin-right: 10px;
     border-style: solid;
-    background-color: #262626;
-    border-color: #262626;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-color: transparent;
     border-radius: 50%;
     color: white;
-    padding: 0 3px;
+    padding: 0.1vh 0.5vh 0.3vh 0.3vh;
     font-size: 0.7em;
     cursor: pointer;
     outline: none;
 }
 
+.close:hover, .close:focus {
+    outline: none;
+    transform: scale(1.1);
+}
+
 .resource-links-container {
     width: 90%;
     box-sizing: border-box;
-    text-align: center;
     padding-top: 20px;
     margin: 0 auto;
 }
@@ -50,12 +55,21 @@
 @media only screen and (min-width: 768px) {
 
     .expanded-resource-card h2 {
-        font-size: 1.2vw;
+        font-size: 2vw;
         padding: 2vh;
     }
 
-    .close {
-        margin-left: 1vw;
-        padding: 0 0.4vw;
+    .resource-tags {
+        padding-left: 5vw;
+        font-size: 1.4em;
     }
+
+    .close {
+        font-size: 1.1vw;
+        margin-right: 2vw;
+        display: inline-block;
+        vertical-align: middle;
+        box-sizing: border-box;
+        padding: 0.1vw 0.5vw 0.2vw 0.3vw;
+    }   
 }
