--- a/src/components/ResourceCardExpanded/ResourceCardExpanded.css
+++ b/src/components/ResourceCardExpanded/ResourceCardExpanded.css
@@ -33,7 +33,7 @@
     border-color: transparent;
     border-radius: 50%;
     color: white;
-    padding: 0.1vh 0.5vh 0.3vh 0.3vh;
+    padding: 0.1em 0.5em 0.3em 0.3em;
     font-size: 0.7em;
     cursor: pointer;
     outline: none;
