--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -1,7 +1,8 @@
-﻿body {
+﻿body
+{
 }
 
-.signup-form {
+.login-form {
     background: #303e4b;
     margin-top: 2rem;
     max-width: 590px;
@@ -15,23 +16,23 @@
     color: #f9f9f9;
 }
 
-.signup-form  input {
-        margin-bottom: 2rem;
-        background: #fff;
-        border: 1px solid #9c9c9c;
+
+.login-form input {
+    margin-bottom: 2rem;
+    background: #fff;
+    border: 1px solid #9c9c9c;
 }
 
- .signup-form input[type=submit] {
+    .login-form input[type=submit] {
         background: #678;
         padding: 0.7em;
         border: 0;
- }
+    }
 
 
 label {
     display: block;
-    padding: 6px 1.5em 0.5em 6px;
-    text-align:left;
+    padding: 0.5em 1.5em 0.5em 0;
 }
 
 input {
@@ -40,9 +41,9 @@ input {
     margin-bottom: 0.5rem;
 }
 
-input:focus {
-      outline: 3px solid gold;
- }
+    input:focus {
+        outline: 3px solid gold;
+    }
 
 @media (min-width: 350px) {
     form {
@@ -59,7 +60,7 @@ input:focus {
         width: calc(100% - 200px);
     }
 
-    .signup-form input[type=submit] {
+    .login-form input[type=submit] {
         width: calc(100% - 200px)
     }
 }
