--- a/src/components/HackathonsCard/HackathonsCard.css
+++ b/src/components/HackathonsCard/HackathonsCard.css
@@ -42,12 +42,13 @@
 
 .view {
     position: absolute;
-    padding: 15px 17px;
+    padding: 15px 15px;
     background: #f67676;
     border: 1px solid #f67676;
     border-radius: 50%;
     bottom: -15px;
     right: 8%;
+    color: #fff;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.16);
     transform: rotate(-90deg);
     transition: all 0.2s;
